--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 
 
-    spring.datasource.url=jdbc:mysql://localhost:3306/studentmanagementthymeleaf?createDatabaseIfNotExist=true
+    spring.datasource.url=jdbc:mysql://localhost:3306/studentThymeleaf?createDatabaseIfNotExist=true
     spring.datasource.username=root
     spring.datasource.password=
     spring.jpa.hibernate.ddl-auto=update
